--- a/src/main/java/global.properties
+++ b/src/main/java/global.properties
@@ -1,14 +1,16 @@
 #Android Capabilities
 platform = Android
 appName = ApiDemos-debug.apk
+packageName = io.appium.android.apis
+appActivityName = io.appium.android.apis.ApiDemos
 #Device Galaxy S10
-deviceName = Galaxy s10
-platformVersion = 12.0
-udid = RF8MA3FK36A
+#deviceName = Galaxy s10
+#platformVersion = 12.0
+#udid = RF8MA3FK36A
 ##Device : Pixel 8
-#deviceName = Pixel 8
-#platformVersion = 15
-#udid = emulator-5554
+deviceName = Pixel 8
+platformVersion = 15
+udid = emulator-5554
 #iOS Capabilities
 #platform = iOS
 #appName = ApiDemos-debug.ipa
